--- a/index.html
+++ b/index.html
@@ -10,15 +10,15 @@
 <meta property="og:locale" content="en_US" />
 <meta name="description" content="A mathematical web page." />
 <meta property="og:description" content="A mathematical web page." />
-<link rel="canonical" href="http://localhost:4000/math/" />
-<meta property="og:url" content="http://localhost:4000/math/" />
+<link rel="canonical" href="https://www.jonsmsterling.com//math/" />
+<meta property="og:url" content="https://www.jonsmsterling.com//math/" />
 <meta property="og:site_name" content="The Nursury" />
 <meta name="twitter:card" content="summary" />
 <meta property="twitter:title" content="Lectures" />
 <script type="application/ld+json">
-{"headline":"Lectures","@type":"WebSite","description":"A mathematical web page.","name":"The Nursury","url":"http://localhost:4000/math/","@context":"https://schema.org"}</script>
+{"headline":"Lectures","@type":"WebSite","description":"A mathematical web page.","name":"The Nursury","url":"https://www.jonsmsterling.com//math/","@context":"https://schema.org"}</script>
 <!-- End Jekyll SEO tag -->
-<link rel="stylesheet" href="/math/assets/style.css"><link type="application/atom+xml" rel="alternate" href="http://localhost:4000/math/feed.xml" title="The Nursury" /><link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.15.1/dist/katex.min.css" integrity="sha384-R4558gYOUz8mP9YWpZJjofhk+zx0AS11p36HnD2ZKj/6JR5z27gSSULCNHIRReVs" crossorigin="anonymous">
+<link rel="stylesheet" href="/math/assets/style.css"><link type="application/atom+xml" rel="alternate" href="https://www.jonsmsterling.com//math/feed.xml" title="The Nursury" /><link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.15.1/dist/katex.min.css" integrity="sha384-R4558gYOUz8mP9YWpZJjofhk+zx0AS11p36HnD2ZKj/6JR5z27gSSULCNHIRReVs" crossorigin="anonymous">
 <script defer src="https://cdn.jsdelivr.net/npm/katex@0.15.1/dist/katex.min.js" integrity="sha384-z1fJDqw8ZApjGO3/unPWUPsIymfsJmyrDVWC8Tv/a1HeOtGmkwNd/7xUS0Xcnvsx" crossorigin="anonymous"></script>
 <script defer src="https://cdn.jsdelivr.net/npm/katex@0.15.1/dist/contrib/auto-render.min.js" integrity="sha384-+XBljXPPiv+OzfbB3cVmLHf4hdUFHlWNZN5spNQ7rmHTXpd7WvJum6fIACpNNfIR" crossorigin="anonymous"></script>
 
