--- a/lectures/categorical-foundations.html
+++ b/lectures/categorical-foundations.html
@@ -87,7 +87,10 @@ notion of a category <em>over</em> another category.</p>
 <p>We will draw on the following materials:</p>
 
 <blockquote>
-  <p><em>Ahrens and Lumsdaine.</em> <a href="https://arxiv.org/abs/1705.04296">Displayed Categories</a>.</p>
+  <ul>
+    <li><em>Ahrens and Lumsdaine.</em> <a href="https://arxiv.org/abs/1705.04296">Displayed Categories</a>.</li>
+    <li><em>Jacobs.</em> <a href="https://people.mpi-sws.org/~dreyer/courses/catlogic/jacobs.pdf">Categorical Logic and Type Theory</a>.</li>
+  </ul>
 </blockquote>
 
 <nav>
