--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 <main class="page-content" aria-label="Content">
       <div class="wrapper">
         <div class="home"><h1 class="page-heading">Lectures</h1>
-<p><a href="/math/lectures/categorical-foundations.html">Categorical foundations (draft)</a></p>
+<p><a href="/math/lectures/categorical-foundations.html">Foundations of relative category theory</a></p>
 
 <p><a href="/math/lectures/topos.html">Geometric universes and topoi (draft)</a></p>
 
