--- a/lectures/categorical-foundations.html
+++ b/lectures/categorical-foundations.html
@@ -416,7 +416,7 @@ rephrased more abstractly.</p>
         <p>First we consider the restriction of $u\in \FAM{C}[I]$ to $\FAM{C}[[u,v]]$ as follows:
 <span class="antex display"><img style='margin: -0.093ex 0.029ex -3.019ex 0.0ex; height: 17.652ex; width: 19.367ex;' src="/math/antex/6915d6e19e62c77c278d472907ebb2b0.svg" /></span>
 Explicitly the family $\InvImg{[u,v]}u$ is indexed in a pair of an element $i\in I$ and a morphism $u_i\to v_i$.
-Informally we can think of $\InvImg{[u,v]}u$ as the object of elements of $u_i$ indexed in pairs $(u,u_i\to v_i)$.</p>
+Informally we can think of $\InvImg{[u,v]}u$ as the object of elements of $u_i$ indexed in pairs $(i,u_i\to v_i)$.</p>
       </li>
       <li>
         <p>There is a canonical map
