--- a/lectures/categorical-foundations.html
+++ b/lectures/categorical-foundations.html
@@ -101,7 +101,7 @@ notion of a category <em>over</em> another category.</p>
   <li><a href="#displayed-categories-and-fibrations" id="markdown-toc-displayed-categories-and-fibrations">Displayed categories and fibrations</a>    <ul>
       <li><a href="#cartesian-morphisms" id="markdown-toc-cartesian-morphisms">Cartesian morphisms</a></li>
       <li><a href="#cartesian-fibrations" id="markdown-toc-cartesian-fibrations">Cartesian fibrations</a></li>
-      <li><a href="#example-the-canonical-self-indexing" id="markdown-toc-example-the-canonical-self-indexing">Example: the canonical self-indexing</a></li>
+      <li><a href="#self-indexing" id="markdown-toc-self-indexing">Example: the canonical self-indexing</a></li>
       <li><a href="#ex:family-fibration" id="markdown-toc-ex:family-fibration">Example: the family fibration as a basis for relative category theory</a></li>
       <li><a href="#fiber-categories-and-vertical-maps" id="markdown-toc-fiber-categories-and-vertical-maps">Fiber categories and vertical maps</a></li>
       <li><a href="#displayed-and-fibered-functors" id="markdown-toc-displayed-and-fibered-functors">Displayed and fibered functors</a></li>
@@ -170,7 +170,9 @@ $\bar{f}:\bar{x}\to\Sub{f} \bar{y}$ in $E$ is called <em>cartesian</em> over $f$
 any $m:u\to x$ and $\bar{h}:\bar{u}\to\Sub{u;f} \bar{y}$ there exists a unique
 $\bar{m} : \bar{u}\to\Sub{m} \bar{x}$ with $\bar{m};\bar{f} = \bar{h}$. We visualize
 this unique factorization of $\bar{h}$ through $\bar{f}$ over $m$ as follows:
-<span class="antex display"><img style='margin: 0.002ex 0.077ex -13.784ex 0.0ex; height: 25.466ex; width: 26.892ex;' src="/math/antex/5fd54e32693e4fed9789d5eab19906bc.svg" /></span></p>
+<span class="antex display"><img style='margin: 0.002ex 0.077ex -13.784ex 0.0ex; height: 25.466ex; width: 26.892ex;' src="/math/antex/f3568e9a1d1d1589924461df47321aa2.svg" /></span></p>
+
+<p>Above we have used the “pullback corner” to indicate $\bar{x}\to\bar{y}$ as a cartesian map. We return to this in our discussion of the <a href="#self-indexing">self-indexing</a> of a category.</p>
 
 <h3 id="cartesian-fibrations">Cartesian fibrations</h3>
 
@@ -184,7 +186,7 @@ unique isomorphism, so being fibered is a <em>property</em> of a displayed categ
 <em>isofibration</em> when the condition above holds just for isomorphisms $f : x
 \cong y$ in the base.</p>
 
-<h3 id="example-the-canonical-self-indexing">Example: the canonical self-indexing</h3>
+<h3 id="self-indexing">Example: the canonical self-indexing</h3>
 
 <p>Let $B$ be an ordinary category; there is a canonical displayed category
 $\SelfIx{B}$ over $B$ given fiberwise by the <em>slices</em> of $B$.</p>
