--- a/lectures/categorical-foundations-2.html
+++ b/lectures/categorical-foundations-2.html
@@ -186,7 +186,7 @@ displayed category $B\Sub{!}F$ over $B$ as follows:</p>
   <li>A morphism $(\bar{x},{\ddot{x}})\to\Sub{f}(\bar{y},{\ddot{y}})$ is given by a pair $(\bar{f},{\ddot{f}})$ where $\bar{f}:\bar{x}\to\Sub{f}\bar{y}$ in $E$ and ${\ddot{f}}:{\ddot{x}}\to\Sub{\bar{f}} {\ddot{y}}$ in $F$.</li>
 </ol>
 
-<p>By virtue of the <a href="#displayed-cats-from-functors">above</a>, we may define the
+<p>By virtue of the <a href="/math/lectures/categorical-foundations-2.html#displayed-cats-from-functors">above</a>, we may define the
 <em>pushforward</em> of a displayed category along a functor. In particular, let $E$
 be displayed over $B$ and let $U:B\to C$ be an ordinary functor; then we may
 obtain a displayed category $U\Sub{!}E$ over $C$ as follows:</p>
